Fix code block wrapping.

--- a/docs/clink.css
+++ b/docs/clink.css
@@ -36,7 +36,6 @@ code {
     background-color: #eee;
     border: 1px solid #ddd;
     border-radius: 3px;
-    white-space: nowrap;
 }
 
 pre {
